@@ -3,9 +3,7 @@
 # $Header: $
 
 EAPI=4
-SUPPORT_PYTHON_ABIS="1"
-PYTHON_DEPEND="2"
-RESTRICT_PYTHON_ABIS="3.*"
+PYTHON_COMPAT="python2_5 python2_6 python2_7"
 
 inherit jnrowe-pypi
 
@@ -20,8 +18,20 @@ IUSE=""
 DEPEND="dev-python/setuptools"
 RDEPEND="${DEPEND}"
 
+DOCS=(README.md)
+
 src_unpack() {
 	# Broken tarball, with no toplevel directory among other things
 	mkdir "${S}"; cd "${S}"
 	unpack ${A}
+}
+
+python_install_all() {
+	python-distutils-ng_redoscript "/usr/bin/${PN}"
+}
+
+src_install() {
+	default
+
+	python-distutils-ng_src_install
 }
