@@ -3,9 +3,7 @@
 # $Header: $
 
 EAPI=4
-SUPPORT_PYTHON_ABIS="1"
-PYTHON_DEPEND="2"
-RESTRICT_PYTHON_ABIS="3.*"
+PYTHON_COMPAT="python2_5 python2_6 python2_7"
 
 inherit jnrowe-pypi
 
@@ -20,3 +18,7 @@ IUSE=""
 # setuptools is required in RDEPEND for entry points
 DEPEND="dev-python/setuptools"
 RDEPEND="${DEPEND}"
+
+python_install_all() {
+	python-distutils-ng_redoscript "/usr/bin/${PN}"
+}
