@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Apr 2012; James Rowe <jnrowe@gmail.com> lettuce-0.1.34.ebuild,
+  lettuce-0.1.35.ebuild:
+  Switched to python-distutils-ng eclass.
+
 *lettuce-0.1.35 (07 Apr 2012)
 
   07 Apr 2012; James Rowe <jnrowe@gmail.com> +lettuce-0.1.35.ebuild:
